--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,6 +1,15 @@
 api_platform:
-    title: Hello API Platform
-    version: 1.0.0
+    title: 'Portfolio API'
+    version: '1.0.0'
+    formats:
+        jsonld: ['application/ld+json']
+        json: ['application/json']
+        html: ['text/html']
+        multipart: ['multipart/form-data']
+    error_formats:
+        jsonld: ['application/ld+json']
+        json: ['application/json']
+        html: ['text/html']
     defaults:
         stateless: true
         cache_headers:
