--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,18 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Serializer\MultipartDecoder:
+        tags:
+            - { name: 'serializer.encoder' }
+
+    App\Serializer\FileNormalizer:
+        tags:
+            - { name: 'serializer.normalizer' }
